--- a/main.ipynb
+++ b/main.ipynb
@@ -38,6 +38,31 @@
     "jugadores= modulos._init_.crearestructura(jugadores,nombres,goals,goals_avoided,assists)\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "sub-inciso 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "el nombre del goleador/ar es:  CAROLINA los goles son: 14   \n"
+     ]
+    }
+   ],
+   "source": [
+    "goleador = modulos._init_.maximogoleador(jugadores)\n",
+    "print(f'el nombre del goleador/ar es: {goleador[0]} los goles son: {goleador[1][0]}   ') "
+   ]
   }
  ],
  "metadata": {
