sub inciso 3 arreglado

--- a/main.ipynb
+++ b/main.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -73,18 +73,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "module 'modulos._init_' has no attribute 'jugadormasinfluyente'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[57], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m nommasinflu, masinfluyente \u001b[38;5;241m=\u001b[39m \u001b[43mmodulos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_init_\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mjugadormasinfluyente\u001b[49m(jugadores)\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mel nombre del jugador/a mas influyente es: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnommasinflu\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m con su influencia segun la tabla de valores es: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmasinfluyente\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m   \u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "\u001b[1;31mAttributeError\u001b[0m: module 'modulos._init_' has no attribute 'jugadormasinfluyente'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "el nombre del jugador/a mas influyente es:  CAROLINA con su influencia segun la tabla de valores es: 25.5   \n"
      ]
     }
    ],
