--- a/main.ipynb
+++ b/main.ipynb
@@ -88,6 +88,31 @@
     "nommasinflu, masinfluyente = modulos._init_.jugadormasinfluyente(jugadores)\n",
     "print(f'el nombre del jugador/a mas influyente es: {nommasinflu} con su influencia segun la tabla de valores es: {masinfluyente}   ')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "sub-inciso 4\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "la cantidad de goles por partido del equipo de hockey es: 2.84\n"
+     ]
+    }
+   ],
+   "source": [
+    "golestotales = modulos._init_.golestotalespromedio(jugadores)\n",
+    "print(f'la cantidad de goles por partido del equipo de hockey es: {golestotales/25}')"
+   ]
   }
  ],
  "metadata": {
