--- a/main.ipynb
+++ b/main.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -112,6 +112,32 @@
    "source": [
     "golestotales = modulos._init_.golestotalespromedio(jugadores)\n",
     "print(f'la cantidad de goles por partido del equipo de hockey es: {golestotales/25}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "sub-inciso 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "el goleador/a es:  CAROLINA que por partido tiene 0.56 goles por partido\n"
+     ]
+    }
+   ],
+   "source": [
+    "#reutilizamos lo hecho del punto b\n",
+    "goleadorprom = modulos._init_.promediogoleador(goleador)\n",
+    "print(f'el goleador/a es: {goleador[0]} que por partido tiene {goleadorprom} goles por partido')"
    ]
   }
  ],
